# blitz_agent

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  agent_blitz_one_blitzindex.py  app.py  dev.env  docker-compose.yml  init_results_db.sql  markdown_test.py  markdown_test_results.html  nginx.conf  permissons.sql  pyproject.toml  requirements.txt  result_DAO.py
.roo/docs/roo/: custom_instructions.md
.roo/rules-architect/: 01-thorough_memory_bank_initialization.md
copilot_rules/: rules.txt
manual_tests/: .env.example  workload_generator_manual_test.py
prompts/: general_sp_blitz.txt  over_indexing.txt
src/: agent_blitz_one_blitzindex.py  app_filter_sort.py  connection_DAO.py  db_DAO.py  db_connection.py  models.py  result_DAO.py
static/: style.css
templates/: administration.html  analyze.html  base.html  blitz.html  blitzcache.html  blitzindex.html  index.html  index_details.html  notfound.html  recommendation_detail.html  recommendations.html
tests/: INTEGRATION_TESTING_STRATEGY.md  README.md  expected_database_connection.txt  test_app_integration.py  test_db_DAO.py  test_filter_sort.py  test_over_indexing_dao.py  test_result_DAO.py  test_workload_generator.py  workload_generator.py
tests/adventureworks_workload/: ADVENTURE_WORKS_INIT_README.md  README.md  init_adventure_works.py  workload_generator.py  workload_generator_main.py
tests/copilot_rules/: rules.txt
