[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitz_agent"
version = "0.1.0"
description = "A blitz agent application"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
norecursedirs = ["tests/adventureworks_workload"]
